--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <head>
+        <link rel="icon" href="./cat jpg.jpeg">
         <title>Test Page</title>
         <h1>Heading <br/>one</h1>
     <p> Hey this is a <a href="http://google.com">cool item.</a></p>
