--- a/test.html
+++ b/test.html
@@ -2,8 +2,12 @@
     <head>
         <link rel="icon" href="./cat jpg.jpeg">
         <title>Test Page</title>
+    </head>
+    <body>
         <h1>Cat's are cool!!</h1>
-    <p> Hey this is a <a href="http://google.com">cool item.</a></p>
-    <p> WOe these cats are cats <strong>cats</strong>are<em> cats.</em><p></p>
-    <img src="./cat jpg.jpeg"/>
-    <img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg">
+        <p> Hey this is a <a href="http://google.com">cool item.</a></p>
+        <p> WOe these cats are cats <strong>cats</strong>are<em> cats.</em><p></p>
+        <img src="./cat jpg.jpeg"/>
+        <img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg">
+</body>
+</html>
